--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "spin_server_up"
+edition = "2021"
+path = "src/main.rs"
 
 [dependencies]
+num_enum = "0.5.7"
