--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ edition = "2021"
 path = "src/main.rs"
 
 [dependencies]
+bincode = "1.3.3"
 bitflags = "1.3.2"
 num_enum = "0.5.7"
+serde = { version = "1.0.144", features = ["derive"] }
