--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ bitflags = "1.3.2"
 num_enum = "0.5.7"
 serde = { version = "1.0.144", features = ["derive"] }
 anyhow = { version = "1.0.62", optional = true }
+uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
