--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ required-features = ["anyhow"]
 bincode = "1.3.3"
 bitflags = "1.3.2"
 num_enum = "0.5.7"
+rand = "0.8.5"
 serde = { version = "1.0.144", features = ["derive"] }
 anyhow = { version = "1.0.62", optional = true }
 uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
