add a boilerplate for server state machine impls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,6 @@ num_enum = "0.5.7"
 rand = "0.8.5"
 serde = { version = "1.0.144", features = ["derive"] }
 anyhow = { version = "1.0.62", optional = true }
+libgssapi = { version = "0.6.3", default-features = false }
+libgssapi-sys = { version = "0.2.4", default-features = false }
 uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
