--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ required-features = ["anyhow"]
 [dependencies]
 bincode = "1.3.3"
 bitflags = "1.3.2"
+der = "0.6.0"
 num_enum = "0.5.7"
 rand = "0.8.5"
 serde = { version = "1.0.144", features = ["derive"] }
