--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ bincode = "1.3.3"
 bitflags = "1.3.2"
 der = "0.6.0"
 num_enum = "0.5.7"
+nom = "7"
+nom-derive = "0.10.0"
 rand = "0.8.5"
 serde = { version = "1.0.144", features = ["derive"] }
 anyhow = { version = "1.0.62", optional = true }
