--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,9 @@ nom-derive = "0.10.0"
 rand = "0.8.5"
 serde = { version = "1.0.144", features = ["derive"] }
 anyhow = { version = "1.0.62", optional = true }
-libgssapi-sys = { version = "0.2.4", default-features = false }
-uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
+uuid = { version = "1.1.2", features = [
+  "v4",
+  "fast-rng",
+  "macro-diagnostics",
+  "serde"
+] }
