--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,9 @@ uuid = { version = "1.1.2", features = [
   "macro-diagnostics",
   "serde"
 ] }
+md4 = "0.10.2"
+des = "0.8.1"
+md-5 = "0.10.5"
+hmac = "0.12.1"
+digest = "0.10.6"
+rc4 = "0.1.0"
