--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,6 @@
-[package]
-name = "smb_reader"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[[bin]]
-name = "spin_server_up"
-edition = "2021"
-path = "src/main.rs"
-required-features = ["anyhow"]
-
-[dependencies]
-bincode = "1.3.3"
-bitflags = "1.3.2"
-der = "0.6.0"
-num_enum = "0.5.7"
-nom = "7"
-nom-derive = "0.10.0"
-rand = "0.8.5"
-serde = { version = "1.0.144", features = ["derive"] }
-anyhow = { version = "1.0.62", optional = true }
-uuid = { version = "1.1.2", features = [
-  "v4",
-  "fast-rng",
-  "macro-diagnostics",
-  "serde"
-] }
-md4 = "0.10.2"
-des = "0.8.1"
-md-5 = "0.10.5"
-hmac = "0.12.1"
-digest = "0.10.6"
-rc4 = "0.1.0"
+[workspace]
+members = [
+    "smb",
+    "smb-core",
+    "smb-derive",
+]
