--- a/smb-derive/Cargo.toml
+++ b/smb-derive/Cargo.toml
@@ -12,5 +12,6 @@ proc-macro = true
 [dependencies]
 quote = "1"
 proc-macro2 = "1.0"
-syn = {version = "2.0.9", features = ["extra-traits"]}
+syn = { version = "^1.0", features = ["extra-traits"] }
 darling = "0.14.4"
+smb-core = { path = "../smb-core" }
