--- a/smb-derive/Cargo.toml
+++ b/smb-derive/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "smb-derive"
-version = "0.0.0"
+version = "0.0.1"
 authors = ["Tejas Mehta <tmthecoder@gmail.com>"]
 description = "A `cargo generate` template for quick-starting a procedural macro crate"
 keywords = ["template", "proc_macro", "procmacro"]
-edition = "2018"
+edition = "2021"
 
 [lib]
 proc-macro = true
 
 [dependencies]
-quote = "1"
-proc-macro2 = "1.0"
-syn = { version = "^1.0", features = ["extra-traits"] }
-darling = "0.14.4"
+syn = { version = "2.0.20", features = ["extra-traits", "parsing"] }
+darling = "0.20.1"
 smb-core = { path = "../smb-core" }
+quote = "1.0.32"
+proc-macro2 = "1.0.66"
