--- a/smb/Cargo.toml
+++ b/smb/Cargo.toml
@@ -38,3 +38,4 @@ aes = "0.8.2"
 smb-derive = { path = "../smb-derive" }
 smb-core = { path = "../smb-core" }
 bytes = { version = "1.5.0" }
+derive_builder = "0.12.0"
