--- a/smb/Cargo.toml
+++ b/smb/Cargo.toml
@@ -39,3 +39,10 @@ smb-derive = { path = "../smb-derive" }
 smb-core = { path = "../smb-core" }
 bytes = { version = "1.5.0" }
 derive_builder = "0.12.0"
+tokio = { version = "1.35.1", optional = true, features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
+tokio-stream = { version = "0.1.14", optional = true }
+tokio-util = { version = "0.7.10", optional = true }
+
+[features]
+async = ["tokio", "tokio-stream", "tokio-util"]
+server = ["async"]
