--- a/smb/Cargo.toml
+++ b/smb/Cargo.toml
@@ -42,6 +42,7 @@ derive_builder = "0.12.0"
 tokio = { version = "1.35.1", optional = true, features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
 tokio-stream = { version = "0.1.14", optional = true }
 tokio-util = { version = "0.7.10", optional = true }
+hkdf = "0.12.4"
 
 [features]
 async = ["tokio", "tokio-stream", "tokio-util"]
