fix: smb-derive macro correctness bugs and comprehensive test suite
- Fix StringTag::smb_from_bytes using relative offset as absolute index
- Fix Vector::smb_to_bytes alignment closure hardcoding 8 instead of align param
- Fix smb_enum_from_bytes NamedStruct arm missing #variant_ident interpolation
- Fix ByteTag::smb_from_bytes missing bounds check (panic → Err on malformed input)
- Fix SMBString::smb_to_bytes UTF-16 length using UTF-8 byte count instead of UTF-16 byte count
- Fix encode_utf16() iterator not collected in string serialization
- Remove all debug println! statements (compile-time and runtime)
- Add rustdoc to all 4 creator modules (FromBytes, ToBytes, ByteSize, EnumFromBytes)
- Add rustdoc to all attribute structs and field mapping types
- Add 25 integration tests covering all derive macros and field attribute types
- Add smb-core and num_enum as dev-dependencies for test support

--- a/smb-derive/Cargo.toml
+++ b/smb-derive/Cargo.toml
@@ -15,3 +15,7 @@ darling = "0.20.1"
 quote = "1.0.32"
 proc-macro2 = "1.0.66"
 num_enum = "0.5.7"
+
+[dev-dependencies]
+smb-core = { path = "../smb-core" }
+num_enum = "0.5.7"
