run checks on push

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,7 @@
 name: Documentation
 
 on:
-  push:
-    branches: [main, "feat/**"]
-  pull_request:
-    branches: [main]
-
-env:
-  CARGO_TERM_COLOR: always
+  push
 
 jobs:
   doc:
