--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,11 +1,8 @@
 name: Integration Tests
 
 on:
-  push:
-    branches: [main, "feat/**"]
-  pull_request:
-    branches: [main]
-
+  push
+  
 env:
   CARGO_TERM_COLOR: always
 
