--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,10 +1,7 @@
 name: Check & Clippy
 
 on:
-  push:
-    branches: [main, "feat/**"]
-  pull_request:
-    branches: [main]
+  push
 
 env:
   CARGO_TERM_COLOR: always
