feat: add documentation, unit tests, integration tests, and CI workflows (#2)
* feat: add rustdoc, inline unit tests, smbclient integration tests, and CI workflows

- Add rustdoc to key public modules (lib, protocol, header, body, message)
- Add inline #[cfg(test)] unit tests to 11 source files covering:
  byte_helper, header, flags, command_code, dialect, capabilities,
  security_mode, filetime, error_response, empty/echo, message
- Move doc comments above #[derive] to fix proc-macro tag serialization
- Create smbclient-based integration tests (tests/smbclient.rs)
- Add GitHub Actions workflows: check, unit-tests, integration-tests, docs

Test results: 47 passed, 4 expected failures (known bugs:
u64 bit-shift 54 vs 56, error_response parse always returns UnknownError,
filetime round-trip depends on buggy u64 helpers)

* chore: upgrade all crates to Rust edition 2024

- smb-core, smb-derive, smb: edition 2021 → 2024
- Restore let-chains syntax in smb-derive/src/field.rs (stable in 2024)
- Remove explicit `ref` in match patterns (implicit in 2024)
  - smb-derive/src/field_mapping.rs
  - smb/src/server/message_handler.rs

* fix: smb-derive macro correctness bugs and comprehensive test suite

- Fix StringTag::smb_from_bytes using relative offset as absolute index
- Fix Vector::smb_to_bytes alignment closure hardcoding 8 instead of align param
- Fix smb_enum_from_bytes NamedStruct arm missing #variant_ident interpolation
- Fix ByteTag::smb_from_bytes missing bounds check (panic → Err on malformed input)
- Fix SMBString::smb_to_bytes UTF-16 length using UTF-8 byte count instead of UTF-16 byte count
- Fix encode_utf16() iterator not collected in string serialization
- Remove all debug println! statements (compile-time and runtime)
- Add rustdoc to all 4 creator modules (FromBytes, ToBytes, ByteSize, EnumFromBytes)
- Add rustdoc to all attribute structs and field mapping types
- Add 25 integration tests covering all derive macros and field attribute types
- Add smb-core an

--- a/smb-derive/Cargo.toml
+++ b/smb-derive/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 authors = ["Tejas Mehta <tmthecoder@gmail.com>"]
 description = "A `cargo generate` template for quick-starting a procedural macro crate"
 keywords = ["template", "proc_macro", "procmacro"]
-edition = "2021"
+edition = "2024"
 
 [lib]
 proc-macro = true
@@ -14,4 +14,8 @@ syn = { version = "2.0.20", features = ["extra-traits", "parsing"] }
 darling = "0.20.1"
 quote = "1.0.32"
 proc-macro2 = "1.0.66"
+num_enum = "0.5.7"
+
+[dev-dependencies]
+smb-core = { path = "../smb-core" }
 num_enum = "0.5.7"
