--- a/smb-core/Cargo.toml
+++ b/smb-core/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2024"
 uuid = "1.3.0"
 serde = { version = "1.0.144", features = ["derive"] }
 num_enum = "0.5.7"
+tracing = { version = "0.1", optional = true }
+
+[features]
+tracing = ["dep:tracing"]
+logging = ["tracing/log"]
