--- a/smb/Cargo.toml
+++ b/smb/Cargo.toml
@@ -38,6 +38,8 @@ aes = "0.8.2"
 aes-gcm = "0.10.3"
 smb-derive = { path = "../smb-derive" }
 smb-core = { path = "../smb-core" }
+tracing = { version = "0.1", optional = true }
+tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"] }
 bytes = { version = "1.5.0" }
 derive_builder = "0.12.0"
 tokio = { version = "1.35.1", optional = true, features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
@@ -48,3 +50,5 @@ hkdf = "0.12.4"
 [features]
 async = ["tokio", "tokio-stream", "tokio-util"]
 server = ["async"]
+tracing = ["dep:tracing", "dep:tracing-subscriber", "smb-core/tracing"]
+logging = ["tracing", "smb-core/logging"]
